fabric/testdata/out/ing_fabric-event-scheduler-gateway-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"eedb8509-1ee8-11e9-b78f-0a57a5a15272","deployment-id":"d-8dmn6j9jdg33ypaeqm2jv7v2d","pipeline-id":"l-26s8kqzdng1pty8usuum69sw4p"},"name":"fabric-event-scheduler-gateway-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"fabric-event-streams.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"fabric-event-scheduler","servicePort":"http"},"pathType":"ImplementationSpecific"}]}}]}}'
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2019-06-17T13:46:03Z"
  generation: 2
  labels:
    controller-uid: eedb8509-1ee8-11e9-b78f-0a57a5a15272
    deployment-id: d-8dmn6j9jdg33ypaeqm2jv7v2d
    pipeline-id: l-26s8kqzdng1pty8usuum69sw4p
  name: fabric-event-scheduler-gateway-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: fabric-event-scheduler-gateway
    uid: eedb8509-1ee8-11e9-b78f-0a57a5a15272
  resourceVersion: "1357488656"
  uid: 3f73523e-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: fabric-event-streams.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: fabric-event-scheduler
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
